force-app/main/default/objects/Collaboration_Details_by_Institution__c/Collaboration_Details_by_Institution__c.object-meta.xml
<CustomObject>
    <label>Collaboration Details by Institution</label>
    <nameField>
        <displayFormat>COL-{00000}</displayFormat>
        <label>Collaboration Details by Institution</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaboration Details by Institution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>