force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/ABAC_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>ABAC_Approval_Date__c</fullName>
    <label>ABAC Approval Date</label>
    <type>Date</type>
</CustomField>