force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/All_RCA_Components_Completed__c.field-meta.xml
<CustomField>
    <fullName>All_RCA_Components_Completed__c</fullName>
    <label>All RCA Components Completed Date</label>
    <type>Date</type>
</CustomField>