force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Budget_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Budget_Agreement__c</fullName>
    <description>Formerly Budget Agreement JG 09.01.20</description>
    <label>Budget Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Sr. Mgmnt Approved</fullName>
                <isActive>false</isActive>
                <label>Sr. Mgmnt Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>