force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Budget_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Approval_Date__c</fullName>
    <label>Budget Approval Date</label>
    <type>Date</type>
</CustomField>