force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Budget_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Budget_Assessment__c</fullName>
    <label>Budget Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Not Reviewed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Need More Info</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <isActive>false</isActive>
                <label>Not Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>