force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Budget_Itemization_Information_Available__c.field-meta.xml
<CustomField>
    <fullName>Budget_Itemization_Information_Available__c</fullName>
    <description>Formerly Budget Itemization Information Available JG 09.01.20</description>
    <label>Budget Itemization Info Available Date</label>
    <type>Date</type>
</CustomField>