force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Cases_Archived__c.field-meta.xml
<CustomField>
    <fullName>Cases_Archived__c</fullName>
    <label>Cases (Archived) (I)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>