force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Cases_Sequenced_Committed__c.field-meta.xml
<CustomField>
    <fullName>Cases_Sequenced_Committed__c</fullName>
    <label>Cases Sequenced (Committed) (I)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>