force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Collaboration_Institution_Link__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Institution_Link__c</fullName>
    <description>This is a formula field that shows the name of the institution and has a hyper link to the Collaboration Details by Institution record.</description>
    <formula>HYPERLINK( &quot;/&quot;+Id, Collaborator_Institution__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collaborator Institution</label>
    <type>Text</type>
</CustomField>