force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Collaboration_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Opportunity__c</fullName>
    <label>Collaboration Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Collaboration Details by Institution</relationshipLabel>
    <relationshipName>Collaborations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>