force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Collaborator_Institution__c.field-meta.xml
<CustomField>
    <fullName>Collaborator_Institution__c</fullName>
    <label>Collaborator Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collaboration Details by Institution</relationshipLabel>
    <relationshipName>Collaborations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>