force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Confidentiality_Period_Ends__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Period_Ends__c</fullName>
    <label>Confidentiality Period Ends</label>
    <type>Date</type>
</CustomField>