force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Controls_Prospective__c.field-meta.xml
<CustomField>
    <fullName>Controls_Prospective__c</fullName>
    <label>Controls (Prospective) (I)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>