force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Controls_Received_Committed__c.field-meta.xml
<CustomField>
    <fullName>Controls_Received_Committed__c</fullName>
    <label>Controls Received (Committed) (I)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>