force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Controls_Received_RGN_Archived__c.field-meta.xml
<CustomField>
    <fullName>Controls_Received_RGN_Archived__c</fullName>
    <label>Controls Received (RGN Archived) (I)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>