force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Cost_per_Year_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Year_Agreed__c</fullName>
    <label>Cost / Year - Agreed (I)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>