force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Country_Formula__c.field-meta.xml
<CustomField>
    <fullName>Country_Formula__c</fullName>
    <formula>TEXT(Collaborator_Institution__r.Country_global__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>