force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Country_of_Sample_Origin_global__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Sample_Origin_global__c</fullName>
    <label>Country of Sample Origin</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>