force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Country_of_Sample_Origin_US_Non_US__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Sample_Origin_US_Non_US__c</fullName>
    <label>Country of Sample Origin US/Non-US</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-US</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>