force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/CV_Signoff_at_ROP_Date__c.field-meta.xml
<CustomField>
    <fullName>CV_Signoff_at_ROP_Date__c</fullName>
    <label>CV Signoff at ROP Date</label>
    <type>Date</type>
</CustomField>