force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Data_Dictionary_Obtained_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Dictionary_Obtained_Date__c</fullName>
    <label>Data Dictionary Obtained Date</label>
    <type>Date</type>
</CustomField>