force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Finalize_Research_Plan__c.field-meta.xml
<CustomField>
    <fullName>Finalize_Research_Plan__c</fullName>
    <description>Formerly Finalize Research Plan JG 09.01.20</description>
    <label>Finalized Research Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>