force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Funds_available__c.field-meta.xml
<CustomField>
    <fullName>Funds_available__c</fullName>
    <description>Formerly Funds Available JG 09.01.20</description>
    <label>Budget Assessment Date</label>
    <type>Date</type>
</CustomField>