force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/GDPR_Data_Role__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Data_Role__c</fullName>
    <label>GDPR Data Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processor</fullName>
                <default>true</default>
                <label>Processor</label>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>