force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Genotyping_Complete__c.field-meta.xml
<CustomField>
    <fullName>Genotyping_Complete__c</fullName>
    <label>Genotyping Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>