force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/ICF_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>ICF_Approved_Date__c</fullName>
    <label>ICF Approved Date</label>
    <type>Date</type>
</CustomField>