force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/ICF_Status__c.field-meta.xml
<CustomField>
    <fullName>ICF_Status__c</fullName>
    <label>ICF Status</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>