force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/ICFs_Available__c.field-meta.xml
<CustomField>
    <fullName>ICFs_Available__c</fullName>
    <label>ICFs Available</label>
    <type>Date</type>
</CustomField>