force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/ICFs_Ready_for_Legal_Review__c.field-meta.xml
<CustomField>
    <fullName>ICFs_Ready_for_Legal_Review__c</fullName>
    <description>Formerly ICFs Ready for Legal Review JG 09.02.20</description>
    <label>ICF Certification Start Date</label>
    <type>Date</type>
</CustomField>