force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Informed_Consent_Forms__c.field-meta.xml
<CustomField>
    <fullName>Informed_Consent_Forms__c</fullName>
    <description>Formerly Informed Consent Form Approval JG 09.01.20</description>
    <label>ICF Certification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>