force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Informed_Consent_Forms_Approved__c.field-meta.xml
<CustomField>
    <fullName>Informed_Consent_Forms_Approved__c</fullName>
    <label>Informed Consent Forms Approved</label>
    <type>Date</type>
</CustomField>