force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Iniate_Process__c.field-meta.xml
<CustomField>
    <fullName>Iniate_Process__c</fullName>
    <label>Iniate Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>