force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Institution_Logo__c.field-meta.xml
<CustomField>
    <fullName>Institution_Logo__c</fullName>
    <label>Institution Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>