force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/IRB_Protocol_Status__c.field-meta.xml
<CustomField>
    <fullName>IRB_Protocol_Status__c</fullName>
    <label>IRB Protocol Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Cleared</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>