force-app/main/default/objects/Collaboration_Details_by_Institution__c/fields/Obtain_Data_Dictionary__c.field-meta.xml
<CustomField>
    <fullName>Obtain_Data_Dictionary__c</fullName>
    <label>Obtain Data Dictionary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>